# pi-desktop

./: .gitignore  CLAUDE.md  bunfig.toml  components.json  package-lock.json  package.json  test-setup.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: dev-with-token.ts
server/: package.json  test-setup.ts  tsconfig.json
server/scripts/: build-sidecar.ts
server/src/: index.test.ts  index.ts
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  web-fetch-render.json
src-tauri/src/: generated_files.rs  lib.rs  web_fetch.rs
src/components/: Blueprint.tsx  ConversationTree.tsx  IconRail.tsx  MainHeader.test.tsx  MainHeader.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusTag.tsx  TitleBar.test.tsx  TitleBar.tsx  icons.tsx
src/data/: mockData.ts
src/hooks/: useActiveRun.test.tsx  useActiveRun.ts  useScheduledAwareness.test.tsx  useScheduledAwareness.ts  useScheduledTasks.test.tsx  useScheduledTasks.ts
src/lib/: analytics.test.ts  analytics.ts  asCodeBlock.test.ts  asCodeBlock.ts  branchActionsContext.ts  branchIdContext.ts  conversationIdContext.ts  headlessRender.test.ts  headlessRender.ts  nativeFiles.test.ts  nativeFiles.ts  resolveToken.test.ts  resolveToken.ts  serverOrigin.ts  styles.ts
src/state/: apiBase.ts  attachmentDrafts.ts  useConversations.test.ts  useConversations.ts  useShellState.test.ts  useShellState.ts
src/styles/: design-system.css  design-system.test.ts
src/views/: ArtifactCanvas.test.tsx  (+9 more)
test/: agent-chat.e2e.test.ts  scheduled-tasks.e2e.test.ts
(+113 files in other folders)
